--- a/index.html
+++ b/index.html
@@ -647,9 +647,9 @@
 
         <div class="box">
             <h3>contact us</h3>
-            <a href="#">+123-456-7890</a>
-            <a href="#">example@gmail.com</a>
-            <a href="#">mumbai, india - 400104</a>
+            <a href="#">7654164232</a>
+            <a href="#">swarnnirmal2132000@gmail.com</a>
+            <a href="#">Jaipur,Rajasthan, India - 302033</a>
             <img src="images/payment.png" alt="">
         </div>
 
@@ -661,7 +661,7 @@
 
 </section>
 
-<!-- footer section ends -->
+
 
 
 
