--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="user">
         <img src="images/user-img.png" alt="">
-        <h3>Swarn Nirmal</h3>
+        <h3>swarn nirmal</h3>
     </div>
 
     <div class="links">
@@ -655,7 +655,7 @@
 
     </div>
 
-    <div class="credit"> created by <span> Swarn Nirmal </span>  </div>
+    <div class="credit"> created by <span> swarn nirmal </span>  </div>
 
 </div>
 
